# multi_agent_beads

./: .gitignore  ARCHITECTURE.md  PLAN.md  PROMPT.md  README.md  USAGE.md  USER_TEST.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
config/: labels.yaml  roles.yaml
dashboard/: app.py  config.py  exceptions.py
dashboard/routes/: agents.py  beads.py  logs.py  towns.py  workers.py  ws.py
dashboard/services/: __init__.py  beads.py
dashboard/static/: styles.css
dashboard/templates/: admin.html  agents.html  base.html  beads.html  dashboard.html  help.html  logs.html  towns.html
docs/: INSTALLATION.md  MAB_QUICKSTART.md  MULTI_AGENT_WORKFLOW.md  TESTING.md  WORKER_WORKFLOW.md  daemon-architecture.md
mab/: __init__.py  bd_close.py  cli.py  daemon.py  dashboard_manager.py  db.py  filesystem.py  pr_validation.py  rpc.py  spawner.py  templates.py  towns.py  version.py  workers.py
prompts/: CODE_REVIEWER.md  DEVELOPER.md  MANAGER.md  QA.md  TECH_LEAD.md  _COMMON.md
scripts/: mcp_test_runner.py  monitor.py  setup.sh  spawn_agent.py  validate_logs.py
tests/: test_daemon.py  test_daemon_dispatch.py  test_dashboard.py  test_dashboard_agents.py  test_dashboard_beads.py  test_dashboard_logs.py  test_dashboard_towns.py  test_db.py  test_dispatch_prompt_type.py  test_filesystem.py  test_integration.py  test_log_validation.py  test_mab_cli.py  test_pr_validation.py  test_rpc.py  test_spawn.py  test_spawner_prompts.py  test_templates.py  test_towns.py  test_workers.py  test_workers_api.py
tests/e2e/: conftest.py  run_chrome_mcp_test.py  (+5 more)
(+44 files in other folders)
